# DetarikiKB

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_CONTEXT.md  CLAUDE.md  README.md  TASKS.md  docker-compose.yml  implementation_plan.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
config/: script_commands.yaml
docker/: Dockerfile.dev
schemas/: canonical_knowledge.schema.json  character_profiles.schema.json  evidence_index.schema.json  extraction.schema.json  internal_review_evidence_packet_manifest.schema.json  internal_review_evidence_packet_selection.schema.json  internal_review_evidence_packet_story.schema.json  internal_review_evidence_packet_validation_report.schema.json  manual_overrides.schema.json  merged_knowledge.schema.json  merged_knowledge_collection.schema.json  public_id_registry.schema.json  story.schema.json  story_manifest.schema.json  story_summary.schema.json
scripts/: build_character_review_packet.py  build_evidence_index_candidates.py  build_story_manifest_candidates.py  build_story_title_subtitle_candidates.py  check_character_dictionary_coverage.py  check_dry_run_inputs.py  check_evidence_index_promotion.py  check_invisible_unicode.py  check_public_episode_ids.py  check_script_compatibility.py  check_story_summary_drafts.py  classify_promotion_candidates.py  compare_character_dictionaries.py  extract_story.py  generate_internal_review_evidence_packet.py  generate_story_summaries.py  import_character_profiles_from_wiki.py  judge_hscene_variants.py  merge_extractions.py  normalize_story.py  (+11 more)
(+347 files in other folders)
