[project]
name = "detarikikb"
version = "0.1.0"
description = "Detariki Knowledge Base"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.0.0",
    "pre-commit>=3.6.0",
    "mkdocs-material>=9.5.0"
]

[tool.ruff]
line-length = 88
target-version = "py312"
# Disable Black in favor of Ruff format
# `ruff format` is used for formatting

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
